# parallel_labs

./: .gitignore  CMakeLists.txt  bellman_ford_openmp.h  bellman_ford_pthread.h  bellman_ford_pthread_naive.h  bellman_ford_pthread_simple.h  bellman_ford_serial.h  benchmark.cpp  graph.h  main.cpp
graphs/: medium.txt  small.txt
